# esp_idf_antispoof

./: partitions.csv  sdkconfig  sdkconfig.defaults
Analyze esp-who result/: evaluate_face_recognition.py  face_recognition_results.csv
Quantization INT-8/Analyzed result/: analyze_model_ops.py  compare_antispoof_backends.py  evaluate_antispoof_confusion.py  inspect_model.py
Quantization INT-8/Benchmark/: antispoof_report.csv  batch_compare_antispoof.py
Quantization INT-8/Create_tflite/: README.md  convert_onnx_to_tflite_fullint8.py  export_onnx_to_tflite_float32.py  process_dataset.py  requirements-idf-py311.txt  requirements-py312.txt  run_local_folder_install.ps1  run_local_idf_py311.ps1
Quantization INT-8/Draw chart/: plot_charts.py  plot_optimization_results.py
Quantization INT-8/FLOAT32/: antispoof.float32.legacy.sim.tflite  antispoof.float32.local.tflite
Quantization INT-8/INT8/: antispoof.fullint8.legacy.sim.tflite  antispoof.fullint8.tflite
Quantization INT-8/data/: antispoof.kernelshape.onnx  antispoof.legacy.onnx  antispoof.legacy.sim.onnx  antispoof.onnx  antispoof.onnx.data  antispoof.tflite  download_model.py
main/: CMakeLists.txt  antispoof_task.cpp  antispoof_task.h  app_httpd.cpp  bitmaps.cpp  bitmaps.h  camera_index.h  camera_pins.h  door_events.h  extract_handlers.hpp  idf_component.yml  main.cpp  old_app_httpd.cpp.bak  project_logic.cpp
